crates/toml_edit/tests/fixtures/invalid/duplicate-key-table.stderr
TOML parse error at line 4, column 1
  |
4 | [fruit.type]
  | ^
Invalid table header
Duplicate key `type` in table `fruit`
